Em style.css, adicionado as classes bg-gray (background) e hr-white (tag hr)

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,3 +17,11 @@ img {
 .bg-black {
     background-color: black;
 }
+
+.bg-gray {
+    background-color: #222;
+}
+
+.hr-white {
+    background-color: #FFFFFF;
+}
